[package]
name = "cg-demo"
version = "0.1.0"
edition = "2021"

[build-dependencies]
walkdir = "2.3.2"

[dependencies]
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] } # Window/GUI API
gl = "0.14.0"                                                        # OpenGL bindings
cgmath = "0.18.0"                                                    # Vector/Matrix classes for non-shader calculations
image = "0.24.2"                                                     # Images/Texture reading
log = "0.4.17"                                                       # Logging interface
simple_logger = "2.1.0"                                              # Logging implementation